クイズ画面の追加と、ルーティングの調整🍜

--- a/templates/web/quizu_top.html
+++ b/templates/web/quizu_top.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+<!--
+    Created by HIR0Y0SHI on 2017/05/31
+
+    クイズ画面TOPのHTML
+    この画面で、モード選択をする
+ -->
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sample</title>
+    <title>とべマスター</title>
 </head>
 <body>
-    <h1>It's Sample!!</h1>
+    <h1>（テストタイトル）TOP</h1>
 
-    <hr />
-
-    <h2>My name is {{name}}!</h2>
-
-    <p><img src="/tobe_master/public/images/sample.jpg" alt=""></p>
 </body>
 </html>
