--- a/templates/web/quizu_one_mode.html
+++ b/templates/web/quizu_one_mode.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
+<!--
+    Created by HIR0Y0SHI on 2017/05/31
+
+    一人で遊ぶ画面のHTML
+ -->
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sample</title>
+    <title>一人で遊ぶ</title>
 </head>
 <body>
-    <h1>It's Sample!!</h1>
+    <h1>（テストタイトル）一人で遊ぶ</h1>
 
-    <hr />
-
-    <h2>My name is {{name}}!</h2>
-
-    <p><img src="/tobe_master/public/images/sample.jpg" alt=""></p>
 </body>
 </html>
