--- a/templates/web/test_html/test_typing.html
+++ b/templates/web/test_html/test_typing.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--
+    テストだよ
+ -->
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>タイピングのテストファイルです</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>テスト</title>
 </head>
 <body>
-
+    <h1>（テストタイトル）テスト</h1>
 </body>
 </html>
