テスト変更

--- a/templates/web/test_html/test_typing.html
+++ b/templates/web/test_html/test_typing.html
@@ -11,5 +11,6 @@
 </head>
 <body>
     <h1>（テストタイトル）テスト</h1>
+    <script src="/tobe_master/public/js/import.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
