クイズ作成画面の追加

--- a/templates/management/makeQuizu.html
+++ b/templates/management/makeQuizu.html
@@ -7,12 +7,12 @@
   <!-- <link rel="stylesheet" href="css/quizTop.css"/> -->
   <!-- BootstrapのCSS読み込み -->
   <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/sample_tab.css" rel="stylesheet">
+  <link href="css/makeQuiz.css" rel="stylesheet">
   <!-- jQuery読み込み -->
   <script src="js/jquery-3.1.1.min.js"></script>
   <!-- BootstrapのJS読み込み -->
   <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-  <script src="js/sample_tab.js"></script>
+  <script src="js/makeQuiz.js"></script>
 </head>
 <body>
   <div class="container">
