--- a/templates/management/makeQuiz.html
+++ b/templates/management/makeQuiz.html
@@ -6,13 +6,13 @@
   <title>クイズトップ</title>
   <!-- <link rel="stylesheet" href="css/quizTop.css"/> -->
   <!-- BootstrapのCSS読み込み -->
-  <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/sample_tab.css" rel="stylesheet">
+  <link href="../../tobe_master/public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../tobe_master/public/css/sample_tab.css" rel="stylesheet">
   <!-- jQuery読み込み -->
-  <script src="js/jquery-3.1.1.min.js"></script>
+  <script src="../../tobe_master/public/s/jquery-3.1.1.min.js"></script>
   <!-- BootstrapのJS読み込み -->
-  <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-  <script src="js/sample_tab.js"></script>
+  <script src="../../tobe_master/public/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+  <script src="../../tobe_master/public/js/sample_tab.js"></script>
 </head>
 <body>
   <div class="container">
