--- a/templates/web/test_html/timebar.html
+++ b/templates/web/test_html/timebar.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/tobe_master/public/css/web/import_multi.css">
     <title>テスト</title>
     <style>
       #box1, #box2, #box3, #box4{
@@ -35,6 +36,7 @@
 	<!--プレイ者を確認-->
   <div id="box1" style="width:100%;height:100%;background-color:beige;z-index:10">
     <h1>複数人プレイで決定押して飛んでくるページ<br>kuwanoですか？</h1>
+    <button class="next">kuwanoです</button>
   </div>
 
   <!--問題表示-->
@@ -42,13 +44,13 @@
     <h1 id="qu"></h1>
     <!--残り時間を表示する-->
     <div id="time"><div id="timebar"></div></div>
-    <div id="answ"><p></p></div>
-    <div id="inc"><p></p></div>
+    <button type="button" id="ans" value=""></button>
+	<button type="button" id="inc" value=""></button>
   </div>
 
   <!--答えを表示-->
   <div id="box3" style="width:100%;height:100%;background-color:deeppink;z-index:8">
-    <h1 id="ans"></h1>
+    <h1 id="answer"></h1>
   </div>
 
   <!--正解者表示-->
