TEST: デプロイ環境テスト２

--- a/templates/management/test.html
+++ b/templates/management/test.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- testesttest -->
     <form action="/tobe_master/management/quizu/make" method="post">
         <input type="text" name="hoge" value="hoge">
         <input type="submit" value="送信">
