--- a/templates/management/makeQuizu.html
+++ b/templates/management/makeQuizu.html
@@ -30,6 +30,10 @@
           <div class="tab-title-bar"></div>
         </ul>
         <ul class="tab-contents">
+
+
+
+
 <!--        Aパターン         -->
           <li class="active">
             <article class="selected">
@@ -134,6 +138,12 @@
               </div>
             </article>
           </li>
+
+
+
+
+
+
 <!--     Bパターン        -->
           <li>
             <article  class="selected">
@@ -141,7 +151,7 @@
                 <section>
                   <h3>Bパターン</h3>
                   <hr>
-                  <form class="form-horizontal" method="post" name="signup" id="signup" enctype="multipart/form-data">
+                  <form class="form-horizontal" method="post" action="/tobe_master/management/quizu/make/b" name="signup" id="signup" enctype="multipart/form-data">
                     <div class="form-group"> <label class="control-label col-sm-3">タイトル<span class="text-danger">*</span></label>
                       <div class="col-md-8 col-sm-9"> <input type="text" class="form-control" name="mem_name" id="mem_name" placeholder="タイトルを書いてください" value=""> </div>
                     </div>
@@ -240,6 +250,11 @@
               </div>
             </article>
           </li>
+
+
+
+
+
 <!--     Cパターン        -->
           <li>
             <article class="selected">
@@ -247,7 +262,7 @@
                 <section>
                   <h3>Cパターン</h3>
                   <hr>
-                  <form class="form-horizontal" method="post" name="signup" id="signup" enctype="multipart/form-data">
+                  <form class="form-horizontal" method="post" action="/tobe_master/management/quizu/make/c" name="signup" id="signup" enctype="multipart/form-data">
                     <div class="form-group"> <label class="control-label col-sm-3">タイトル<span class="text-danger">*</span></label>
                       <div class="col-md-8 col-sm-9"> <input type="text" class="form-control" name="mem_name" id="mem_name" placeholder="タイトルを書いてください" value=""> </div>
                     </div>
