ファイル名変更に伴い、影響範囲を変更🙏💦

--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -7,19 +7,19 @@
   <!-- <link rel="stylesheet" href="css/quizTop.css"/> -->
   <!-- BootstrapのCSS読み込み -->
   <link href="/tobe_master/public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/tobe_master/public/css/management/makeQuizu.css" rel="stylesheet">
+  <link href="/tobe_master/public/css/management/makeQuestion.css" rel="stylesheet">
   <!-- jQuery読み込み -->
   <script src="/tobe_master/public/js/jquery-3.1.1.min.js"></script>
   <!-- BootstrapのJS読み込み -->
   <script src="/tobe_master/public/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-  <script src="/tobe_master/public/js/management/makeQuizu.js"></script>
+  <script src="/tobe_master/public/js/management/makeQuestion.js"></script>
 </head>
 <body>
   <div class="container">
     <div class="row　row_quiz">
       <div class="col-md-12">
         <h1 class="text-center"> クイズ作成 </h1>
-        <p class="link"> <a href="makeQuizu.html" role="button" class="btn btn-link button">クイズ管理へ</a> <a href="makeQuizu.html" role="button" class="btn btn-link button">エリア管理へ</a> </p>
+        <p class="link"> <a href="makeQuestion.html" role="button" class="btn btn-link button">クイズ管理へ</a> <a href="makeQuestion.html" role="button" class="btn btn-link button">エリア管理へ</a> </p>
       </div><!-- class=col-md-12 -->
 
       <div class="tab">
