とりあえず、ログインの実装完了

--- a/templates/management/login.html
+++ b/templates/management/login.html
@@ -23,10 +23,10 @@
 			{% if message is not null %}
 			{{message}}
 			{% endif %}
-			<form class="form-signin" action="/tobe_master/management/login" method="POST">
+			<form class="form-signin" action="/tobe_master/management/login" method="post">
 				<span id="reauth-email" class="reauth-email"></span>
-				<input type="text" id="inputId" class="form-control" placeholder="User ID" required autofocus>
-				<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+				<input type="text" name="inputId" id="inputId" class="form-control" placeholder="User ID" required autofocus>
+				<input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
 
 				<button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">ログイン</button>
 			</form><!-- /form -->
