--- a/public/css/management/makeQuestion.css
+++ b/public/css/management/makeQuestion.css
@@ -195,3 +195,9 @@ article.selected {
 .upload {
   padding: unset;
 }
+.correct {
+  background-color: #A9E2F3;
+}
+.incorrect {
+  background-color: #F6CECE;
+}
